_opam/.opam-switch/sources/ppx_custom_printf.v0.16.0/test/test.mlt
#print_column_numbers true

let f () = !"%{sexp:nosuchtype}"

[%%expect {|
Line _, characters 12-22:
Error: Unbound value sexp_of_nosuchtype
|}]
